--- a/my-project/src/app/components/navbar/navbar.component.css
+++ b/my-project/src/app/components/navbar/navbar.component.css
@@ -1,7 +1,7 @@
 
 .menu
 {
-margin-right: 30px;
+margin-right: 1%;
 color: black;
 }
 .head
@@ -18,7 +18,7 @@ color: black;
 .view
 {
     margin-right: 50px;
-    color: black;   
+    color: black;
 }
 .apps
 {
@@ -38,14 +38,16 @@ color: black;
 {
     height:39px;
     width:699px;
-    
+
     background-color:  rgb(235, 174, 22);
     border:0px;
     border-radius: 5px;
     font-size: 20px;
-  
-        outline:none;
-        
+     outline:none;
+
+}
+input:focus {
+    background-color: white;
 }
 /* .mat-drawer-container {
     position: fixed;
@@ -59,14 +61,15 @@ color: black;
 .toolbar{
     background-color: #fb0;
     display:flex;
-    
+    position: fixed;
+    z-index: 2;
 }
 .sBar{
     background-color: rgb(235, 174, 22);
     display: flex;
     align-items: center;
-    height:41px;
-    width:699px;
+    height:85%;
+    width:80%;
     color: black;
     border-radius: 5px;
 }
@@ -74,33 +77,42 @@ color: black;
     font-size: 30px;
 }
 .example-container {
+
     height: fit-content;
     width: 100%;
 
+
   }
    .example-sidenav-content {
-    display: flex;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
-  
+    height: 100%;
+    margin: 0px;
+    min-height: 100%;
+    min-width: 100%;
+    width: 100%;
+    position: fixed;
+    background-color:gainsboro;
+
   }
-  
+
   .example-sidenav {
 
     padding-left: 0%;
     padding-right: 0%;
-    padding-top: 10px;
-   background-color:  rgb(214, 218, 216);
-    
+    padding-top: 5px;
+    background-color: rgb(214, 218, 216);
+    position: fixed;
+    margin: 55px 0px 0px 0px;
+    width: 286px;
+
+
 }
 
 
-  .example-sidenav[_ngcontent-c3] {
+  /* .example-sidenav[_ngcontent-c3] {
     padding-left:0px;
     padding-right: 0px;
     padding-top: 5px;
-}
+} */
 .mat-stroked-button {
   border:0px ;
   line-height: 58px;
@@ -108,8 +120,9 @@ color: black;
   background-color: rgb(214, 218, 216);
   text-align: left;
   font-weight: 400;
-  
+
 }
+
 .Link{
     color: rgba(0,0,0,.54);
     cursor: pointer;
@@ -126,17 +139,17 @@ color: black;
 .img{
 
   margin-right:20px;
-  
+
 
 }
-.button1{
+/* .button1{
 padding-left: 100px;
  width: 20%;
  height: 6%;
  font-size: 11%;
  font-weight: 700;
- 
-}
+
+} */
 .para{
 
   margin-left: 20px;
