--- a/my-project/src/app/components/navbar/navbar.component.html
+++ b/my-project/src/app/components/navbar/navbar.component.html
@@ -19,15 +19,15 @@
       <i class="material-icons ">
           refresh
           </i></button>
-          <button mat-icon-button class="view">
+          <button mat-icon-button class="view" fxHide.xs="true">
           <i class="material-icons">
               view_agenda
               </i> </button>
-              <button mat-icon-button class="apps">
+              <button mat-icon-button class="apps" fxHide.xs="true">
               <i class="material-icons " >
                   apps
                   </i> </button>
-                  <button mat-icon-button class="notify">
+                  <button mat-icon-button class="notify" fxHide.xs="true">
                   <i class="material-icons " >
                       notifications
                       </i></button>
@@ -39,8 +39,8 @@
     </mat-toolbar-row></mat-toolbar></div>
 
     <div>
-        <mat-sidenav-container class="example-container" fxFill hasBackdrop="false" >
-            <mat-sidenav #drawer class="example-sidenav" mode="side">
+        <mat-sidenav-container  class="example-container" fxFill hasBackdrop="false" >
+            <mat-sidenav  #drawer class="example-sidenav" mode="side">
          <mat-list>
               <button mat-stroked-button ><img class="img" src="../../../assets/images/note.svg" >Notes</button><br>
               <button mat-stroked-button ><img class="img" src="../../../assets/images/reminders.svg" >Reminder</button>
@@ -48,7 +48,7 @@
               <mat-divider></mat-divider>
               <mat-list>
               <p class="para">Labels<button mat-button>EDIT</button></p>
-            
+
               <button mat-stroked-button ><img class="img" src="../../../assets/images/label.svg" >Create new label</button>
               </mat-list>
               <mat-divider></mat-divider>
@@ -68,13 +68,12 @@
                   <a href="http://www.google.com/policies/terms/"  class="Link" >Terms</a><br>
                   <a href="http://ssl.gstatic.com/keep/open-source_licenses.txt"  class="Link" >Open-source licenses</a>
                 </div>
-              
-                       
+
+
             </mat-sidenav>
             <div class="example-sidenav-content" >
-                
-                   
-        
+
+
             </div>
           </mat-sidenav-container>
         </div>
