--- a/my-project/src/app/components/navbar/navbar.component.html
+++ b/my-project/src/app/components/navbar/navbar.component.html
@@ -8,7 +8,8 @@
             menu
             </i>
         </button>
-      <span class="head">Fundoo Notes</span>
+      <span class="head" fxHide.xs="true" fxHide.sm="true">Fundoo</span>
+      <span class="head1" >Notes</span>
       <div class="sBar">
       <i class="material-icons">
          search
@@ -19,22 +20,23 @@
       <i class="material-icons ">
           refresh
           </i></button>
-          <button mat-icon-button class="view" fxHide.xs="true">
+          <button mat-icon-button class="view" fxHide.xs="true" fxHide.sm="true">
           <i class="material-icons">
               view_agenda
               </i> </button>
-              <button mat-icon-button class="apps" fxHide.xs="true">
+              <button mat-icon-button class="apps" fxHide.xs="true" fxHide.sm="true">
               <i class="material-icons " >
                   apps
                   </i> </button>
-                  <button mat-icon-button class="notify" fxHide.xs="true">
+                  <button mat-icon-button class="notify" fxHide.xs="true" fxHide.sm="true">
                   <i class="material-icons " >
                       notifications
                       </i></button>
-                      <button mat-icon-button class=" person">
+                      <button  mat-icon-button class=" person" (click)="logout=!logout" >
                   <i class="material-icons" >
                       person
-                      </i></button>
+                      </i>
+                      </button>
 
     </mat-toolbar-row></mat-toolbar></div>
 
@@ -73,7 +75,22 @@
             </mat-sidenav>
             <div class="example-sidenav-content" >
 
+<mat-card class="example-card" *ngIf="logout">
+    <mat-list flexLayout="row">
+    <mat-card-header>
 
+      <div mat-card-avatar class="example-header-image"></div>
+      <mat-card-title>Arghya Ray</mat-card-title>
+      <mat-card-subtitle>arece7@gmail.com</mat-card-subtitle>
+
+    </mat-card-header></mat-list>
+<mat-divider></mat-divider>
+<mat-list>
+    <mat-card-actions>
+    <button mat-button class="button2" style="margin-left: 116px;">Log out</button>
+    </mat-card-actions>
+</mat-list>
+</mat-card>
             </div>
           </mat-sidenav-container>
         </div>
