--- a/my-project/src/app/components/navbar/navbar.component.css
+++ b/my-project/src/app/components/navbar/navbar.component.css
@@ -49,8 +49,17 @@ color: black;
     border-radius: 5px;
     font-size: 20px;
      outline:none;
+     padding: 0px 0px 0px 47px;
 
 }
+.searchicon
+  {
+    position: absolute;
+    padding-left: 10px;
+    color: black
+}
+
+
 input:focus {
     background-color: white;
 }
@@ -66,18 +75,10 @@ input:focus {
 .toolbar{
     background-color: #fb0;
     /* display:flex; */
-    position: relative;
+    position: fixed;
     z-index: 2;
 }
-.sBar{
-    background-color: rgb(235, 174, 22);
-    display: flex;
-    align-items: center;
-    height:85%;
-    width:80%;
-    color: black;
-    border-radius: 5px;
-}
+
 .material-icons{
     font-size: 30px;
 }
@@ -88,16 +89,14 @@ input:focus {
 
 
   }
-   .example-sidenav-content {
-    height: 100%;
-    margin: 0px;
-    min-height: 100%;
-    min-width: 100%;
-    width: 100%;
-    position: fixed;
-    background-color:gainsboro;
+      /* .example-sidenav-content {
 
-  }
+    overflow:auto;
+    position: fixed;
+    padding-right: 2%;
+    padding-left:5%;
+
+  } */
 
   .example-sidenav {
 
@@ -163,14 +162,13 @@ padding-left: 100px;
 .example-card {
   max-width: 300px;
   max-height: 150px;
-  position: absolute;
+  position: fixed;
   right: 0;
+  top:50px;
+  z-index: 1;
 }
 
-.example-header-image {
-  background-image: url('../../../assets/images/a-img.png');
-  background-size: cover;
-}
+
 .button2{
   margin-left: 85px;
   color:azure;
