--- a/my-project/src/app/components/navbar/navbar.component.html
+++ b/my-project/src/app/components/navbar/navbar.component.html
@@ -3,7 +3,7 @@
 <div>
 <mat-toolbar color="primary" class="toolbar"  >
     <mat-toolbar-row>
-            <button mat-icon-button class="menu">
+            <button mat-icon-button class="menu"  matTooltip="Menu">
         <i (click)="drawer.toggle()" class="material-icons ">
             menu
             </i>
@@ -56,8 +56,8 @@
               </mat-list>
               <mat-divider></mat-divider>
               <mat-list>
-              <button mat-stroked-button ><img class="img" src="../../../assets/images/archive.svg" >Archive</button><br>
-              <button mat-stroked-button ><img class="img" src="../../../assets/images/tash.svg" >Trash</button>
+              <button mat-stroked-button (click)="archive()" ><img class="img" src="../../../assets/images/archive.svg" >Archive</button><br>
+              <button mat-stroked-button (click)="trash()"><img class="img" src="../../../assets/images/tash.svg" >Trash</button>
               </mat-list>
               <mat-divider></mat-divider>
               <mat-list>
