--- a/my-project/src/app/components/createlabel/createlabel.component.css
+++ b/my-project/src/app/components/createlabel/createlabel.component.css
@@ -1,11 +1,24 @@
 .textarea{
-  width:90%;
+  /* width:90%; */
   outline: none;
+  white-space:nowrap;
+  text-overflow:ellipsis;
+  overflow: hidden !important;
+  border-bottom:2px solid black;
+
 }
 .textarea:empty:before{
   content: attr(data-text);
   opacity: 0.5;
   font-size: 12px;
+}
+.icon{
+  font-size:16px;
+  cursor: pointer;
+  opacity: 0.7;
+}
+.icon:hover{
+  opacity:1
 }
 .area
 {
