--- a/my-project/src/app/components/update/update.component.css
+++ b/my-project/src/app/components/update/update.component.css
@@ -1,7 +1,7 @@
 .matcard
 {
     width: 600px;
-    margin-top: 7%;
+   height:auto;
 
 
 }
@@ -26,4 +26,32 @@ div:empty:before {
     padding-top: 12px;
     padding-left: 14px;
     padding-bottom: 0px
+}
+::ng-deep .mat-dialog-container {
+  box-shadow: 0 11px 15px -7px rgba(0,0,0,.2), 0 24px 38px 3px rgba(0,0,0,.14), 0 9px 46px 8px rgba(0,0,0,.12);
+  display: block;
+  padding:0px;
+  border-radius: 2px;
+  box-sizing: border-box;
+   overflow:hidden;
+   overflow-y: auto;
+  outline: 0;
+  width: 100%;
+  height: 100%;
+  min-height: inherit;
+  max-height: inherit;
+}
+.mat-card-actions, .mat-card-content, .mat-card-subtitle, .mat-card-title {
+  display: block;
+   margin-bottom: 0px;
+}
+mat-card-actions {
+ margin-left: 0px;
+  margin-right: 0px;
+  padding: 0px 0px;
+}
+.mat-card>.mat-card-actions:last-child {
+  margin-bottom: -16px;
+  padding-bottom: 0;
+  padding-right: 30px;
 }
