--- a/my-project/src/app/components/trash/trash.component.html
+++ b/my-project/src/app/components/trash/trash.component.html
@@ -1,1 +1,1 @@
-<app-notes-collection [NoteArray]=notes></app-notes-collection>
+<app-notes-collection [NoteArray]=notes (onNewEntryDeleted)="eventLabel($event)"></app-notes-collection>
