--- a/my-project/src/app/components/archive/archive.component.html
+++ b/my-project/src/app/components/archive/archive.component.html
@@ -1,3 +1,6 @@
-<button mat-icon-button matTooltip="Archive" (click)=ArchiveNotes()>
+<button mat-icon-button matTooltip="Archive"  *ngIf="!isArchived && !Delete" (click)=ArchiveNotes(true)>
   <i class="material-icons" style="opacity: 0.5;"> archive </i>
   </button>
+  <button mat-icon-button matTooltip="Unarchive" *ngIf="isArchived && !Delete"(click)=ArchiveNotes(false)>
+    <i class="material-icons" style="opacity: 0.5;">unarchive</i>
+    </button>
