--- a/my-project/src/app/components/main-archive/main-archive.component.html
+++ b/my-project/src/app/components/main-archive/main-archive.component.html
@@ -1,2 +1,2 @@
 
-<app-notes-collection [NoteArray]=Array></app-notes-collection>
+<app-notes-collection [NoteArray]=notes (eventEmit)="eventLabel($event)"(onNewColorChange)="addNewEntry($event)" (onNewEntryDeleted)=addNewEntry($event) (update)=addNewEntry($event)></app-notes-collection>
